; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_frame_relay.c_ngfrm_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_frame_relay.c_ngfrm_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_NETGRAPH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ngfrm_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngfrm_shutdown(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @NG_NODE_PRIVATE(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @NG_NODE_SET_PRIVATE(i32 %6, i32* null)
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @M_NETGRAPH, align 4
  %10 = call i32 @free(i32 %8, i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @NG_NODE_UNREF(i32 %11)
  ret i32 0
}

declare dso_local i32 @NG_NODE_PRIVATE(i32) #1

declare dso_local i32 @NG_NODE_SET_PRIVATE(i32, i32*) #1

declare dso_local i32 @free(i32, i32) #1

declare dso_local i32 @NG_NODE_UNREF(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
